06282013 -> devmem   -> Added extra column 'relstatus' to table 'releases' to enable bitwise ops on releases
						Edited lib/framework/db.php to start adding constants for relstatus
						Updated namefixer to only process releases not processed before
						Corrected jonnyboys dates (he was 1 month ahead - it's still June)
06282013 -> jonnyboy -> backfill safe will loop to next group, if available posts is less than 10000
						oops, removed sys.exit from safe backfill
						added back changes to site-edit
						rewrote all python scripts
						added back changes to releases.php
						added output back to postprocess
						reverted some changes looking for nntp hang bug
06272013 -> jonnyboy ->	may have fixed some connection issues
						added legend to output in postprocess
						removed second rm -rf, bad placement
						changed fixreleasenames to use inner join insteaqd of left join
						changed tmpunrar folder creation to chmod 0777 from 0764, just in case
						moved delete stale tmpunrar from threaded script to monitor

* Note *
No future pull requests will be accepted without this file being updated to reflect what you cahnged and when.
No pull requests will be accepted to any branch except the dev branch.
Each update goes to the top of the file